--- a/src/app/components/bootcamp/create-bootcamp/create-bootcamp.component.css
+++ b/src/app/components/bootcamp/create-bootcamp/create-bootcamp.component.css
@@ -2,3 +2,11 @@
     margin-left: 500px;
     margin-top: 500px;
 }
+.table-resp{
+    overflow: auto;
+    height: 420px;
+}
+.comple{
+    top: 100px;
+    position: relative;
+}
