--- a/src/app/components/applicant/add-applicant/add-applicant.component.html
+++ b/src/app/components/applicant/add-applicant/add-applicant.component.html
@@ -34,7 +34,7 @@
       </div>
     
     <button (click)="add()" style="margin-right:15px" type="submit" class="btn btn-warning">Ekle</button>
-    <button type="button" class="btn btn-outline-dark px-3" routerLink="/admin/admin-applicant">Geri Dön</button>
+    <button type="button" class="btn btn-outline-dark px-3" routerLink="/admin/admin-applicant">Gerİ Dön</button>
     </form>
   </div>
 </div>
