--- a/src/app/components/application/add-application/add-application.component.html
+++ b/src/app/components/application/add-application/add-application.component.html
@@ -34,10 +34,20 @@
       </div>
       <div class="form-group">
         <label for="example-number-input" class="form-control-label">Durum</label>
-        <input class="form-control"  placeholder="durum" formControlName="state" type="number" value="23" id="example-number-input">
+        <select class="form-select"  aria-label="Default select example " id="state" formControlName="state" class="form-control">
+          <option  value="" disabled selected>Seç</option>
+          <option  [value]="1">
+            Aktif
+          </option>
+          <option  [value]="2">
+            Pasif
+          </option>
+          
+        </select>
+        <!-- <input class="form-control"  placeholder="durum" formControlName="state" type="number" value="23" id="example-number-input"> -->
     </div>
     <button (click)="add()" style="margin-right:15px" type="submit" class="btn btn-warning">Ekle</button>
-    <button type="button" class="btn btn-outline-dark px-3" routerLink="/admin/admin-application">Geri Dön</button>
+    <button type="button" class="btn btn-outline-dark px-3" routerLink="/admin/admin-application">GERİ Dön</button>
     </form>
   </div>
 </div>
