--- a/src/app/components/black-list/add-black-list/add-black-list.component.html
+++ b/src/app/components/black-list/add-black-list/add-black-list.component.html
@@ -6,7 +6,7 @@
     <form  [formGroup]="addBlackListForm" >
       <div class="form-group">
         <select class="form-select" aria-label="Default select example " id="applicantId" formControlName="applicantId" class="form-control">
-          <option value="" disabled selected>Seç</option>
+          <option value="" disabled selected>İsim Seç</option>
           <option *ngFor="let applicant of applicants" [value]="applicant.id">
             {{applicant.firstName}}
           </option>
@@ -25,7 +25,7 @@
       </div>
     
     <button (click)="addBlacklist()" style="margin-right:15px" type="submit" class="btn btn-warning">Ekle</button>
-    <button type="button" class="btn btn-outline-dark px-3" routerLink="/admin/admin-blacklist">Geri Dön</button>
+    <button type="button" class="btn btn-outline-dark px-3" routerLink="/admin/admin-blacklist">GERİ Dön</button>
     </form>
   </div>
 </div>
