--- a/src/app/components/black-list/update-black-list/update-black-list.component.html
+++ b/src/app/components/black-list/update-black-list/update-black-list.component.html
@@ -18,7 +18,7 @@
       </div>
     
     <button (click)="update()" style="margin-right:15px" type="submit" class="btn btn-warning">Güncelle</button>
-    <button type="button" class="btn btn-outline-dark px-3" routerLink="/admin/admin-blacklist">Geri Dön</button>
+    <button type="button" class="btn btn-outline-dark px-3" routerLink="/admin/admin-blacklist">Gerİ Dön</button>
     </form>
   </div>
 </div>
