--- a/src/app/components/bootcamp/update-bootcamp/update-bootcamp.component.html
+++ b/src/app/components/bootcamp/update-bootcamp/update-bootcamp.component.html
@@ -42,7 +42,7 @@
         <input class="form-control" type="date" formControlName="dateEnd" value="2018-11-23" id="example-date-input">
       </div>
     <button (click)="updateBootcamp()" style="margin-right:15px" type="submit" class="btn btn-warning">Güncelle</button>
-    <button type="button" class="btn btn-outline-dark px-3" routerLink="/admin/admin-bootcampList">Geri Dön</button>
+    <button type="button" class="btn btn-outline-dark px-3" routerLink="/admin/admin-bootcampList">GERİ Dön</button>
     </form>
   </div>
 </div>
