--- a/src/app/layouts/admin-navbar/admin-navbar.component.html
+++ b/src/app/layouts/admin-navbar/admin-navbar.component.html
@@ -1,4 +1,5 @@
-<nav class="navbar nav-1 navbar-expand-lg navbar-dark bg-gradient-dark mt-3 z-index-3 py-3">
+<div class="row">
+<nav class="navbar nav-1 navbar-expand-lg navbar-dark bg-gradient-dark mt-3 z-index-3 py-3 navis">
     <div class="container ">
       <a class="navbar-brand " name="home" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom"
         target="_blank">
@@ -48,3 +49,4 @@
       </div>
     </div>
   </nav>
+</div>
