--- a/src/app/components/bootcamp/create-bootcamp/create-bootcamp.component.html
+++ b/src/app/components/bootcamp/create-bootcamp/create-bootcamp.component.html
@@ -60,7 +60,7 @@
                       routerLink="bootcampList-detail/{{bootcamp.id}}">Detay</button>
                     <button type="button" class="btn btn-outline-dark mx-3"
                       routerLink="update-bootcampList/{{bootcamp.id}}">Düzenle</button>
-                    <button type="button" class="btn btn-outline-dark mx-3 " (click)="delete(bootcamp)">SİL</button>
+                    <button type="button" class="btn btn-outline-dark mx-3 " (click)="delete(bootcamp.id)">SİL</button>
                   </div>
           
                 </td>
