-apply-to-bootcamp

--- a/src/app/applicant-components/applicant-bootcamp-list/applicant-bootcamp-list.component.html
+++ b/src/app/applicant-components/applicant-bootcamp-list/applicant-bootcamp-list.component.html
@@ -33,6 +33,7 @@
             <p>Bitiş Tarihi: {{bootcamp.dateEnd}}</p>
           </div>
         </div>
+        <button (click)="add(bootcamp)">Ekle</button>
       </a>
     </div>
   </div>
