--- a/src/app/layouts/applicant-layouts/applicant-navbar/applicant-navbar.component.html
+++ b/src/app/layouts/applicant-layouts/applicant-navbar/applicant-navbar.component.html
@@ -146,7 +146,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link me-2 text-light fs-6">
+          <a class="nav-link me-2 text-light fs-6" routerLink="applicant-profile">
             <i class="fa fa-user opacity-6 text-light me-1"></i>
             Profile
           </a>
