--- a/src/app/components/applicant/detail-applicant/detail-applicant.component.html
+++ b/src/app/components/applicant/detail-applicant/detail-applicant.component.html
@@ -12,6 +12,7 @@
           <h5 class="card-title"><b>Aday Soyadı:</b> {{data.lastName}}</h5>
           <h5 class="card-title"><b>Doğum Tarihi</b> {{data.dateOfBirth}}</h5>
           <h5 class="card-title"><b>Hakkında:</b> {{data.about}}</h5>
+          <h5 class="card-title"><b>Hakkında:</b> {{data.id}}</h5>
         </div>
       </div>
     </div>
