--- a/src/app/components/application/create-application/create-application.component.html
+++ b/src/app/components/application/create-application/create-application.component.html
@@ -24,10 +24,10 @@
               </thead>
               <tbody *ngFor="let application of applications" class="text-center">
                 <tr>
-                  
+       
                   <td>
                     <p class="text-xs font-weight-bold mb-0"></p>
-                    <p class="text-xs text-secondary mb-0">{{application.applicantName}}</p>
+                    <p class="text-xs text-secondary mb-0">{{application.applyName}}</p>
                   </td>
 
                   <td class="align-middle text-center">
