--- a/src/app/components/application/detail-application/detail-application.component.html
+++ b/src/app/components/application/detail-application/detail-application.component.html
@@ -11,6 +11,7 @@
           <h5 class="card-title"><b>Durum:</b> {{data.state}}</h5>
           <h5 class="card-title"><b>Applicant Id:</b> {{data.applicantId}}</h5>
           <h5 class="card-title"><b>Bootcamp Id:</b> {{data.bootcampId}}</h5>
+          <h5 class="card-title" ><b> Id:</b> {{data.id}} </h5> 
         </div>
       </div>
     </div>
