--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -35,7 +35,7 @@ Latest commit e0832d3 2 hours ago
 
   <div class="bgvv">
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-gradient-dark z-index-3 py-3 top-0">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-gradient-dark z-index-3 py-3 top-0 hehz">
       <div class="container ">
         <a class="navbar-brand " name="home" rel="tooltip" title="Designed and Coded by Creative Tim"
           data-placement="bottom" target="_blank">
