--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -191,7 +191,90 @@ Latest commit e0832d3 2 hours ago
 
             <div class="row mt-6">
 
-              <div class="col-md-4 mb-7">
+              <div class="col-3">
+                <a href="" class="card">
+                  <img src="https://pbs.twimg.com/profile_images/1404479261566713856/_MklDkhx_400x400.jpg" class="card__image" alt="" />
+                  <div class="card__overlay">
+                    <div class="card__header">
+                      <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
+                      <img class="card__thumb" src="https://pbs.twimg.com/profile_images/1404479261566713856/_MklDkhx_400x400.jpg" alt="" />
+                      <div class="card__header-text">
+                        <h3 class="card__title x">Engin Demiroğ</h3>            
+                        <span class="card__status x">Software Developer</span>
+                      </div>
+                    </div>
+                    <p class="card__description x">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, blanditiis?</p>
+                  </div>
+                </a>      
+              </div>
+
+              <div class="col-3">
+                <a href="" class="card">
+                  <img src="https://i.ibb.co/dJgqkdQ/0dc86408-5f16-4c08-8615-e42327f78525.jpg"  class="card__image" alt="" />
+                  <div class="card__overlay">
+                    <div class="card__header">
+                      <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
+                      <img class="card__thumb" src="https://i.ibb.co/dJgqkdQ/0dc86408-5f16-4c08-8615-e42327f78525.jpg" alt="" />
+                      <div class="card__header-text">
+                        <h3 class="card__title x">Enes Bin Malik Köksal</h3>            
+                        <span class="card__status x">Eğitim Uzmanı</span>
+                      </div>
+                    </div>
+                    <p class="card__description x">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, blanditiis?</p>
+                  </div>
+                </a>  
+              </div>
+
+
+              <div class="col-3">
+                <a href="" class="card">
+                  <img src="https://i.ibb.co/brfMGYN/1577f867-7520-43f1-87c4-d72ab84dca09.jpg" style="width: 280px; height:310px; " class="card__image" alt="" />
+                  <div class="card__overlay">
+                    <div class="card__header">
+                      <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
+                      <img class="card__thumb" src="https://i.ibb.co/brfMGYN/1577f867-7520-43f1-87c4-d72ab84dca09.jpg" alt="" />
+                      <div class="card__header-text">
+                        <h3 class="card__title x">Serhat Taşçı</h3>            
+                        <span class="card__status x">Software Developer</span>
+                      </div>
+                    </div>
+                    <p class="card__description x">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, blanditiis?</p>
+                  </div>
+                </a>  
+              </div>
+
+
+
+              <div class="col-3">
+                <a href="" class="card">
+                  <img src="https://i.ibb.co/bgzHXdc/43ca8dab-dfe8-4e2a-8e44-f9e0441014be.jpg" style="width: 280px; " class="card__image" alt="" />
+                  <div class="card__overlay">
+                    <div class="card__header">
+                      <svg class="card__arc" xmlns="http://www.w3.org/2000/svg"><path /></svg>                     
+                      <img class="card__thumb" src="https://i.ibb.co/bgzHXdc/43ca8dab-dfe8-4e2a-8e44-f9e0441014be.jpg" alt="" />
+                      <div class="card__header-text">
+                        <h3 class="card__title x">Engin Demiroğ</h3>            
+                        <span class="card__status x">Software Developer</span>
+                      </div>
+                    </div>
+                    <p class="card__description x">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, blanditiis?</p>
+                  </div>
+                </a>  
+              </div>
+
+              
+
+
+
+
+
+
+
+
+
+
+
+              <!-- <div class="col-md-4 mb-7">
                 <div class="card card-profile card-plain">
                   <div class="row">
                     <div class="col-lg-5">
@@ -224,9 +307,9 @@ Latest commit e0832d3 2 hours ago
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
 
-              <div class="col-md-4">
+              <!-- <div class="col-md-4">
                 <div class="card card-profile card-plain">
                   <div class="row">
                     <div class="col-lg-5">
@@ -329,7 +412,7 @@ Latest commit e0832d3 2 hours ago
                     </div>
                   </div>
                 </div>
-              </div>
+              </div> -->
 
 
 
