--- a/src/app/applicant-components/applicant-profile/applicant-profile.component.html
+++ b/src/app/applicant-components/applicant-profile/applicant-profile.component.html
@@ -1,3 +1,4 @@
+<div class="container mt-8"></div>
 <div class="row">
     <!-- <div class="col-md-6">
         <div class="bg-light rounded border p-5 shadow-lg mt-4" style="height: 100%">
