add-hover&margins

--- a/src/app/components/application/detail-application/detail-application.component.html
+++ b/src/app/components/application/detail-application/detail-application.component.html
@@ -1,4 +1,4 @@
-<div class="mb-3">
+<div class="mb-3 my-6">
   <button type="button" class="btn btn-outline-dark mt-5" routerLink="/admin/admin-application">Geri Dön</button>
   <div class="card">
     <div class="row g-0" *ngFor="let data of applicationDetail">
