--- a/src/app/layouts/admin-navbar/admin-navbar.component.html
+++ b/src/app/layouts/admin-navbar/admin-navbar.component.html
@@ -16,7 +16,7 @@
   
            
             <div class="col-auto m-auto">
-              <div class="dropdown">
+              <div class="dropdown cbc">
                 <li class="nav-item d-flex align-items-center">
                   <a  class="nav-link text-body font-weight-bold ">
                     <i class="fa fa-user me-sm-1 text-light px-1 "></i>
@@ -31,11 +31,11 @@
 
             <div class="col-auto m-auto">
 
-                <a class="text-white cursor-pointer">
-                  <li class="nav-item d-flex align-items-center">
+                <a class="text-white cursor-pointer ">
+                  <li class="nav-item d-flex align-items-center cbca">
                     <a routerLink="/home-login" class="nav-link text-body font-weight-bold">
                       <i class="fa fa-user me-sm-1 text-light px-1"></i>
-                      <span class="d-sm-inline d-none text-light" (click)="logout()">Çıkış Yap </span>
+                      <span class="d-sm-inline d-none text-light " (click)="logout()">Çıkış Yap </span>
                       
                     </a>
                   </li>
