--- a/src/app/layouts/sidebar/sidebar.component.html
+++ b/src/app/layouts/sidebar/sidebar.component.html
@@ -2,7 +2,7 @@
     <aside class=" sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-start ms-3 bg-gradient-dark" id="sidenav-main">
      
       <hr class="horizontal dark mt-0">
-      <div class=" collapse navbar-collapse w-auto side-resp" id="sidenav-collapse-main">
+      <div class=" collapse navbar-collapse w-auto side-resp ghj" id="sidenav-collapse-main">
         <ul class="navbar-nav mt-7">
           <li class="nav-item mb-3">
             <a class="nav-link  " routerLink="/admin">
