--- a/src/app/layouts/instructor-layouts/instructor-navbar/instructor-navbar.component.html
+++ b/src/app/layouts/instructor-layouts/instructor-navbar/instructor-navbar.component.html
@@ -19,6 +19,11 @@
             Kara Liste
           </a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link me-2 text-light fs-6" routerLink="instructor-blacklist">
+            {{name}}
+          </a>
+        </li>
         <li>
           <a class="nav-link me-2 text-light fs-6" routerLink="instructor-list">
             Eğitmen Listesi
